--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.application.name=currency-exchange
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
 
+resilience4j.retry.instances.sample-api.maxAttempts=5
+resilience4j.retry.instances.sample-api.wait-duration=1s
+resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
